src/components/ProjectDetails/projectdetails.css
.main-project {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    padding-block: 0;
    padding-right: 0;
    gap:50px;
}

.project-picture-container {
    display: flex;
    flex-basis: 60%;
}

.project-picture {
    width: 100%;
    object-fit: cover;
}

.margin-top {
    margin-top: 4rem;
}

.project-information {
    padding:5rem;
    display: flex;
    flex-direction: column;
    gap: 5rem;
    font-size: 20px;
    line-height: 22px; 
}

.project-first-row {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    gap:50px;
}
   
.project-categorie {
    flex:30%;
    display: flex;
    flex-direction: column;
    gap: 13px;
}

.project-categorie p:first-child {
    font-weight: 600;
}
   
.project-description {
    flex: 60%;
}

.project-explication {
    flex: 3;
    min-width: 250px;
}

.project-first-picture {
    max-height: 400px;
    object-fit: cover;
}

.project-second-row {
    display: flex;
    flex-flow: row wrap;
    gap:75px;
    align-items: center;
}

.project-skills {
    display: flex;
    justify-content: center;
    gap:100px;
}

.project-details-title {
    position: relative;
}

.project-details-illustration {
    object-fit: cover;
    width: 100%;
    max-width: 9000px;
    max-height: 400px;
    flex: 1;
}

.bottom-project-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 5rem;
}

@media only screen and (max-width: 1000px) {
    .main-project {
        flex-flow: column;
    }
    .project-picture-container {
        flex-basis: 1;
    }
    .project-skills {
        gap: 75px;
    }
}

@media only screen and (max-width: 600px) {
    .project-information {
        padding:3rem;
        gap: 3rem;
    }
    .project-information {
        font-size: 90%;
        line-height: normal; 
    }
    .bottom-project-container {
        padding-inline: 2rem;
    }
}

@media only screen and (max-width: 884px) {
    .second-explication {
        flex-flow: column-reverse;
    }
    .project-skills {
        flex-direction: column;
        align-items: center;
        gap: 50px;
    }
}

